Changes to be committed: 	modified:   banhmy.html 	modified:   bia.html 	modified:   chao.html 	modified:   home.html 	new file:   images/Flag.ico 	new file:   images/favicon.ico 	modified:   lau.html 	modified:   pho.html 	modified:   xoi.html 	deleted:    images/Flag.ico

--- a/lau.html
+++ b/lau.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      
     <title>ベトナム飲食</title>
@@ -24,7 +25,7 @@
           <li><a href="xoi.html">餅米</a></li>
           <li><a href="chao.html">お粥</a></li>
           <li><a href="lau.html">鍋料理</a></li>
-          <li><a href="banhmy.html">バインミー</a></li>
+          <li><a href="banhmy.html">バインミ</a></li>
           <li><a href="bia.html">ビール</a></li>
        </ul>   
    </div>
